build: master branch targeting Micronaut 4.0.0-SNAPSHOT (#379)
Co-authored-by: Dean Wette <wetted@objectcomputing.com>
Co-authored-by: Álvaro Sánchez-Mariscal <alvaro.sanchez-mariscal@oracle.com>